--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,43 +1,47 @@
-<Window x:Class="OpenFile.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OpenFile"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="23" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="23" />
-        </Grid.RowDefinitions>
-        <Menu Grid.Row="0" />
-        <Grid Grid.Row="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="4*" />
-                <RowDefinition Height="1*" />
-            </Grid.RowDefinitions>
-            <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5*" />
-                    <ColumnDefinition Width="1*" />
-                </Grid.ColumnDefinitions>
-                <TreeView Grid.Column="0" x:Name="tree" />
-                <GridSplitter Grid.Column="0" Width="5" />
-                <DataGrid Grid.Column="1" x:Name="grid" />
-            </Grid>
-            <GridSplitter Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" ResizeDirection="Rows" Height="5" />
-            <Grid Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5*" />
-                    <ColumnDefinition Width="1*" />
-                </Grid.ColumnDefinitions>
-                <TextBox Grid.Column="0" x:Name="text" />
-                <GridSplitter Grid.Column="0" Width="5" />
-                <Button Grid.Column="1" x:Name="button" />
-            </Grid>
-        </Grid>
-        <StatusBar Grid.Row="2" />
+<Window
+  x:Class="XmlTreeView.MainWindow"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  xmlns:local="clr-namespace:XmlTreeView"
+  mc:Ignorable="d"
+  Title="MainWindow"
+  Height="350"
+  Width="525">
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition
+        Height="23" />
+      <RowDefinition
+        Height="1*" />
+      <RowDefinition
+        Height="23" />
+    </Grid.RowDefinitions>
+    <Menu
+      Grid.Row="0">
+      <MenuItem
+        Header="Test"
+        Click="MenuItem_Click" />
+    </Menu>
+    <Grid
+      Grid.Row="1">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition />
+        <ColumnDefinition />
+      </Grid.ColumnDefinitions>
+      <TreeView
+        Grid.Column="0"
+        Name="TreeView" />
+      <GridSplitter
+        Grid.Column="0"
+        Width="5" />
+      <DataGrid
+        Grid.Column="1"
+        Name="DataGrid" />
     </Grid>
+    <StatusBar
+      Grid.Row="2">
+    </StatusBar>
+  </Grid>
 </Window>
